<resources>
    <string name="app_name">MU:TE</string>
    <string name="actor">배우</string>
    <string name="mylist">마이리스트</string>
    <string name="all">전체보기</string>
    <string name="musical">뮤지컬</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">동영상</string>
    <string name="photo">사진</string>
    <string name="link">링크</string>
    <string name="add">추가</string>
    <string name="filmography">필모그래피</string>
    <string name="musical_time">공연 기간</string>
    <string name="actors">출연진</string>
    <string name="title">제목</string>
    <string name="time">일시</string>
    <string name="performance_name">공연명</string>
    <string name="casting">캐스팅</string>
    <string name="hashtag">해시태그</string>
    <string name="select_date_time">날짜 및 시간 선택</string>
    <string name="description">내용</string>
    <string name="user_image">사진</string>
    <string name="add_cancel">취소</string>
    <string name="add_next">다음</string>
    <string name="upload_image">사진 업로드</string>
    <string name="upload_video">동영상 업로드</string>
    <string name="upload">업로드</string>
    <string name="select">선택</string>
    <string name="select_actor">배우를 선택해주세요</string>
    <string name="change">변경</string>
    <string name="my_page">마이페이지</string>
    <string name="my_video">내 동영상</string>
    <string name="my_image">내 이미지</string>
    <string name="delete_file">삭제</string>
    <string name="date_time_hint">YYYY/MM/DD-hh:mm</string>
</resources>