<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mute.ui.add.AddVideoViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddVideoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.add.AddVideoFragment">

            <TextView
                android:id="@+id/tv_add_video_cancel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:text="@string/add_cancel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_add_video_next"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:onClick="@{() -> viewModel.validateAndUpload()}"
                android:paddingHorizontal="12dp"
                android:text="@string/upload"
                android:textColor="@color/primary2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/layout_add_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_cancel">

                <VideoView
                    android:id="@+id/vv_add_video"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="20dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_add_video_title"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_add_video" />

            <EditText
                android:id="@+id/et_add_media_video_title"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.mediaTitle}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_add_video_title"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_title"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="4dp"
                android:background="@color/primary3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_title" />

            <TextView
                android:id="@+id/tv_add_video_description"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_title" />

            <EditText
                android:id="@+id/et_add_video_description"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.mediaDescription}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_add_video_description"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_description"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="4dp"
                android:background="@color/primary3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_description" />

            <TextView
                android:id="@+id/tv_add_video_performance_title"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/performance_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_description" />

            <EditText
                android:id="@+id/et_add_video_performance_title"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.performanceTitle}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_add_video_performance_title"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_performance_title"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="4dp"
                android:background="@color/primary3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_performance_title" />

            <TextView
                android:id="@+id/tv_add_video_time"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/time"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_performance_title" />

            <TextView
                android:id="@+id/et_add_video_time"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:text="@{viewModel.performanceTime}"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/iv_add_video_calendar"
                app:layout_constraintStart_toEndOf="@id/tv_add_video_time"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_time" />

            <ImageView
                android:id="@+id/iv_add_video_calendar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/select_date_time"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_video_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/et_add_video_time"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_time" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="4dp"
                android:background="@color/primary3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_time" />

            <TextView
                android:id="@+id/tv_add_video_actors"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/casting"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_video_time" />

            <TextView
                android:id="@+id/et_add_video_actors"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="92dp"
                android:gravity="center_vertical"
                android:hint="@string/select_actor"
                android:maxLines="1"
                android:text='@{viewModel.selectedActor == null ? "" : viewModel.selectedActor.actorName}'
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_add_video_actors"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_actors" />

            <TextView
                android:id="@+id/tv_add_video_select_actor"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/select"
                android:textStyle="bold"
                android:visibility='@{viewModel.selectedActor == null ? View.VISIBLE : View.GONE}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_actors" />

            <TextView
                android:id="@+id/tv_add_video_change_actor"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/change"
                android:textStyle="bold"
                android:visibility='@{viewModel.selectedActor == null ? View.GONE : View.VISIBLE}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_add_video_actors" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>