<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_home_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/app_name"
                android:textColor="@color/primary1"
                android:textSize="28sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_home_musical"
            style="@style/HomeTitle"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/musical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_home_top" />

        <TextView
            android:id="@+id/tv_home_musical_all"
            style="@style/SeeAll"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_home_musical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_home_musical" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_musical"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_musical"
            tools:itemCount="10"
            tools:listitem="@layout/item_home" />

        <TextView
            android:id="@+id/tv_home_actor"
            style="@style/HomeTitle"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/actor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_home_musical" />

        <TextView
            android:id="@+id/tv_home_actor_all"
            style="@style/SeeAll"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_home_actor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_home_actor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_actor"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_actor"
            tools:itemCount="10"
            tools:listitem="@layout/item_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>